--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "2.7.0",
     "eslint-plugin-react": "5.2.2",
     "node-sass": "3.8.0",
+    "react-bootstrap": "^0.30.7",
     "sass-loader": "4.0.0",
     "style-loader": "0.13.1",
     "webpack": "1.13.1",
