--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "sass-loader": "4.0.0",
     "style-loader": "0.13.1",
     "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1",
-    "swipe-toggle-switch": "0.0.1"
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
     "react": "15.2.1",
